tests/paczka1/small_fuzzy/12109464.err
Error in line 11: HhcViKMzF S54 44,2
Error in line 13: HhcViKMzF S779 22,1
